--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,4 +13,5 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
 
 #### the list of targets ####
-add_executable(introduction                introduction/introduction.cpp)
+# add_executable(introduction                1_Introduction/introduction.cpp)
+add_executable(TypesOfData                2_FundamentalTypesOfData/TypesOfData.cpp)
